--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.1"
   },
