--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
