--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.2",
+    "framer-motion": "^10.17.4",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
