--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^10.17.4",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
+    "react-add-to-homescreen": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
